--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 600: '#475569',
                 500: '#3b82f6',
                 400: '#60a5fa',
-                accent: '#0ea5e9', // Sky blue, more professional than cyan
+                accent: '#0ea5e9',
               },
               solana: {
                 primary: '#9945FF',
@@ -63,25 +63,25 @@
   <script type="importmap">
 {
   "imports": {
-    "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
     "react/": "https://esm.sh/react@^19.2.3/",
     "react": "https://esm.sh/react@^19.2.3",
+    "jspdf": "https://esm.sh/jspdf@^3.0.4",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
+    "vite": "https://esm.sh/vite@^7.3.0",
+    "path": "https://esm.sh/path@^0.12.7",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
     "recharts": "https://esm.sh/recharts@^3.6.0",
-    "jspdf": "https://esm.sh/jspdf@2.5.1",
-    "html2canvas": "https://esm.sh/html2canvas@1.4.1",
-    "@solana/web3.js": "https://esm.sh/@solana/web3.js@1.91.0",
-    "borsh": "https://esm.sh/borsh@0.7.0",
-    "buffer": "https://esm.sh/buffer@6.0.3"
+    "buffer": "https://esm.sh/buffer@^6.0.3",
+    "html2canvas": "https://esm.sh/html2canvas@^1.4.1",
+    "@solana/web3.js": "https://esm.sh/@solana/web3.js@^1.98.4",
+    "borsh": "https://esm.sh/borsh@^2.0.0"
   }
 }
-</script>
-<script type="module">
-    import { Buffer } from "buffer";
-    window.Buffer = Buffer;
 </script>
 </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
